
2009-03-26  Sancho Lerena <slerena@artica.es>

	* pandoradb.sql: SLA parameters now accept float values.
	
	* extras/pandoradb_migrate_v2.x_to_v3.0.sql: SLA parameters now accept 
	float values after a table update.
	
	* godmode/setup/filemgr.php: New feature: a file manager, accesible only by
	pandora Administrators. Have some security checks but is not intended to be
	used by anyone not admin.
	
	* godmode/menu.php: Added filemanager and fixed minor problem under SNMP
	Godmode (fake submenu).

2009-03-26  Esteban Sanchez  <estebans@artica.es>

	* include/javascript/jquery.ui.dialog.js: Added to repository.

	* index.php, general/header.php: Replaced overlay with jquery UI
	dialog.

	* godmode/agentes/module_manager.php: Use print_moduletype_image().

	* images/close.png, images/transparent.png,
	include/javascript/jquery.overlay.js: Removed from repository.

	* include/javascript/jquery.pandora.js: Use dialog instead of overlay.

	* include/styles/images/dialog-*: Added to repository. Dialog images.

	* include/styles/pandora.css: Removed overlay styles.

	* include/styles/dialog.css: Added to repository. Dialog styles.

	* include/functions_ui.php: Show description on
	print_moduletype_icon() title.

	* operation/agentes/estado_agente.php: Return control instead of exit.

	* operation/agentes/estado_ultimopaquete.php: Style corrections and
	usage of pandora database functions.

2009-03-26  Esteban Sanchez  <estebans@artica.es>

	* godmode/reporting/reporting_builder.php: Some small fixes which
	didn't allow creating reports or adding contents.

2009-03-26  Esteban Sanchez  <estebans@artica.es>

	* godmode/users/configure_user.php: Complete rewritten to fix minor
	errors and fit the Pandora style.

	* include/auth/ldap.php: Removed process_user_isadmin(). Renamed
	process_user_password() to update_user_password(). Renamed
	process_user_info to update_user(). update_user_password() does not
	require old password anymore.
